# prospections_barcode

./: .gitignore  README.md  pyproject.toml
incolumepy/barcode/: __init__.py  datagen.py  main.py  products.json
tests/: __init__.py  test_incolumepy_barcode.py
