[tool.poetry]
name = "incolumepy.barcode"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/barcode', from=''},
]

license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["barcode"]
classifiers = [
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Education",
  "Topic :: Education :: Testing",
  "Topic :: Utilities"
]
include = [
  "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.9"
python-barcode = "^0.13.1"
Faker = "^8.12.1"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
